<resources>
    <string name="facebook_app_id">YOUR APPS FACEBOOK APP ID GOES HERE</string>

    <string name="app_name">Spree</string>
    <string name="drawer_title_home">Home</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="show_password">Show Password</string>
    <string name="no_notifications">No Notifications</string>
    <string name="products">Products</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="apply">Apply</string>
    <string name="filters">Filters</string>
    <string name="logout_underlined"><u>Logout</u></string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="my_orders">My Orders</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_addresses">My Addresses</string>
    <string name="blank_address_book">Your address book is blank</string>
    <string name="blank_address_book_advise">Kindly add shipping \n billing address and enjoy faster checkout</string>
    <string name="no_saved_cards">No Saved Cards</string>
    <string name="no_saved_cards_message">Kindly add payment methods and \n enjoy faster checkout</string>
    <string name="addresses">Addresses</string>
    <string name="add_address">Add Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="api_call_failure_error">Check your network connection. Kindly retry after sometime</string>
    <string name="checkout">Checkout</string>
    <string name="cart">Cart</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="description">Description</string>
    <string name="blank_cart">No cart item</string>
    <string name="edit_quantity">Edit Quantity</string>
    <string name="out_of_stock">This product is out of stock</string>
    <string name="orders">Orders</string>
    <string name="no_orders">No Orders</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="continue_to_payment">Continue to Payment</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="reviews_and_ratings">Reviews and Ratings</string>
    <string name="no_reviews">No reviews available. Please add first</string>
    <string name="average_user_rating">Average User Rating</string>
    <string name="add_review">Add Review</string>
    <string name="your_rating">Your Rating</string>
    <string name="your_review">Your Review</string>
    <string name="product_share_subject">Check this product out!</string>
    <string name="pay">Pay</string>
    <string name="select_state">Select State</string>
    <!-- Completed orders section -->
    <string name="ordered_on">Ordered On</string>
    <string name="items">Items</string>
    <string name="grand_total">Grand Total</string>
    <string name="shipment">Shipment</string>
    <string name="tax">Tax</string>
    <string name="order_number">Order No. </string>
    <string name="shipment_status">Shipment Status: </string>
</resources>
