<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_signup_container"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:clickable="true"
    >
    <!-- Tab bar layout -->
    <LinearLayout
        android:id="@+id/fragment_signup_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_bar_height"
        android:background="@color/googleBlue"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/fragment_signup_tab_bar_back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/back_tab_icon"
            android:layout_marginLeft="@dimen/margin_10dp"
            >
        </ImageView>

        <com.vinsol.spree.views.CustomFontTextView
            android:id="@+id/fragment_signup_tab_bar_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@android:color/white"
            custom:typeface="roboto_light.ttf"
            >
        </com.vinsol.spree.views.CustomFontTextView>
    </LinearLayout>

    <!-- email edit text -->
    <android.support.design.widget.TextInputLayout
        style="@style/EditText.TextInputLayout"
        android:id="@+id/fragment_signup_email_text_input"
        android:layout_below="@id/fragment_signup_tab_bar"
        >
        <com.vinsol.spree.views.CustomFontEditText
            style="@style/EditText"
            android:id="@+id/fragment_signup_email_txt"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            >
        </com.vinsol.spree.views.CustomFontEditText>
    </android.support.design.widget.TextInputLayout>

    <!-- full name edit text -->
    <android.support.design.widget.TextInputLayout
        style="@style/EditText.TextInputLayout"
        android:id="@+id/fragment_signup_full_name_text_input"
        android:layout_below="@id/fragment_signup_email_text_input"
        >
        <com.vinsol.spree.views.CustomFontEditText
            style="@style/EditText"
            android:id="@+id/fragment_signup_name_txt"
            android:inputType="text"
            android:hint="@string/full_name"
            >
        </com.vinsol.spree.views.CustomFontEditText>
    </android.support.design.widget.TextInputLayout>

    <!-- Password edit text -->
    <android.support.design.widget.TextInputLayout
        style="@style/EditText.TextInputLayout"
        android:id="@+id/fragment_sign_up_password_text_input"
        android:layout_below="@id/fragment_signup_full_name_text_input"
        >
        <com.vinsol.spree.views.CustomFontEditText
            style="@style/EditText"
            android:id="@+id/fragment_signup_password_txt"
            android:inputType="textPassword"
            android:hint="@string/password"
            >
        </com.vinsol.spree.views.CustomFontEditText>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_signup_show_password_img"
        android:layout_marginLeft="@dimen/margin_35dp"
        android:layout_marginRight="@dimen/margin_40dp"
        android:layout_marginTop="@dimen/margin_45dp"
        android:layout_below="@id/fragment_signup_full_name_text_input"
        android:src="@drawable/show_password_icon"
        android:layout_alignParentRight="true"
        >
    </ImageView>

    <!-- phone edit text -->
    <android.support.design.widget.TextInputLayout
        style="@style/EditText.TextInputLayout"
        android:layout_below="@id/fragment_sign_up_password_text_input"
        >
        <com.vinsol.spree.views.CustomFontEditText
            style="@style/EditText"
            android:id="@+id/fragment_signup_number_txt"
            android:inputType="number"
            android:hint="@string/phone"
            android:maxLength="10"
            >
        </com.vinsol.spree.views.CustomFontEditText>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/fragment_signup_btn"
        android:layout_margin="@dimen/margin_35dp"
        android:background="@color/googleBlue"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:text="@string/signup"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_15sp"
        >
    </TextView>

    <include
        layout="@layout/progress_bar"
        >
    </include>
</RelativeLayout>