<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_8dp"
    android:layout_marginBottom="@dimen/margin_8dp"
    android:layout_marginLeft="@dimen/margin_10dp"
    android:layout_marginRight="@dimen/margin_10dp"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/orders_list_view_item_container"
    custom:cardElevation="@dimen/margin_3dp"
    custom:cardCornerRadius="0dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffffff"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                >
                <com.vinsol.spree.views.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ordered_on"
                    android:textSize="@dimen/text_size_12sp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:textColor="@color/textColor"
                    custom:typeface="roboto_light.ttf"/>
                <com.vinsol.spree.views.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:textColor="@color/textColor"
                    android:id="@+id/orders_list_view_item_ordered_on_txt"
                    android:textSize="@dimen/text_size_12sp"
                    custom:typeface="roboto_medium.ttf"
                    android:paddingLeft="@dimen/margin_5dp"
                    android:paddingRight="@dimen/margin_5dp"/>
            </LinearLayout>
            <View
                android:layout_width=".5dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:background="#979797"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                >
                <com.vinsol.spree.views.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/items"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:textSize="@dimen/text_size_12sp"
                    android:textColor="@color/textColor"
                    custom:typeface="roboto_light.ttf"/>
                <com.vinsol.spree.views.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:textColor="@color/textColor"
                    android:id="@+id/orders_list_view_item_total_items_txt"
                    android:textSize="@dimen/text_size_12sp"
                    custom:typeface="roboto_medium.ttf"/>
            </LinearLayout>
            <View
                android:layout_width=".5dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:background="#979797"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                >
                <com.vinsol.spree.views.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grand_total"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:textSize="@dimen/text_size_12sp"
                    android:textColor="@color/textColor"
                    custom:typeface="roboto_light.ttf"/>
                <com.vinsol.spree.views.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:textColor="@color/textColor"
                    android:id="@+id/orders_list_view_item_total_price_txt"
                    android:textSize="@dimen/text_size_12sp"
                    custom:typeface="roboto_medium.ttf"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="#979797"
            android:layout_margin="@dimen/margin_10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:id="@+id/orders_list_view_item_line_items_container"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:orientation="horizontal"
            >
            <com.vinsol.spree.views.CustomFontTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/shipment"
                android:layout_weight="11"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_12sp"
                custom:typeface="roboto_medium.ttf"/>
            <com.vinsol.spree.views.CustomFontTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orders_list_view_item_shipment_price"
                android:gravity="right"
                android:layout_weight="2"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_12sp"
                custom:typeface="roboto_medium.ttf"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:orientation="horizontal"
            >
            <com.vinsol.spree.views.CustomFontTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tax"
                android:layout_weight="11"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size_12sp"
                custom:typeface="roboto_medium.ttf"/>
            <com.vinsol.spree.views.CustomFontTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/orders_list_view_item_tax_price"
                android:gravity="right"
                android:textColor="@color/textColor"
                android:layout_weight="2"
                android:textSize="@dimen/text_size_12sp"
                custom:typeface="roboto_medium.ttf"/>
        </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:gravity="center">
        <com.vinsol.spree.views.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_number"
            android:id="@+id/orders_list_view_item_order_number_label"
            android:textSize="@dimen/text_size_12sp"
            android:textColor="@color/textColor"
            custom:typeface="roboto_light.ttf"/>
        <com.vinsol.spree.views.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/orders_list_view_item_order_number_label"
            android:id="@+id/orders_list_view_item_order_number_txt"
            android:textSize="@dimen/text_size_12sp"
            android:textColor="@color/textColor"
            custom:typeface="roboto_medium.ttf"/>
        <com.vinsol.spree.views.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/orders_list_view_item_shipment_status_txt"
            android:gravity="right"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size_12sp"
            custom:typeface="roboto_medium.ttf"/>
        <com.vinsol.spree.views.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipment_status"
            android:textColor="@color/textColor"
            android:layout_toLeftOf="@id/orders_list_view_item_shipment_status_txt"
            android:id="@+id/orders_list_view_item_shipment_status_label"
            android:textSize="@dimen/text_size_12sp"
            custom:typeface="roboto_light.ttf"/>
        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>